--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -69,6 +69,8 @@
 }
 
 .notes-list__item {
+	position: relative;
+	left: -1.5rem;
 	list-style: none;
 	margin-bottom: 1.25rem;
 	text-overflow: ellipsis;
@@ -92,19 +94,28 @@
 }
 
 .note-editor__header {
-	text-align: center;
 }
 
-.note-editor__header button {
+.note-editor__header__versions button {
 	font-weight: 300;
 	color: #424242;
 }
-.note-editor__header button:hover {
+.note-editor__header__versions button:hover {
 	color: #696969;
 	transition-duration: 100ms;
 }
 
+.note-editor__header__save button {
+}
+
+.note-editor__header__save button {
+}
+
+.note-editor__title {
+	position: relative;
+	left: 3rem;
+}
 .note-editor__content {
-	/* background-color: green; */
-	padding: 3rem;
+	margin: 1.5rem;
+	padding: 2rem;
 }
