--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,91 +1,130 @@
 #root {
-	max-width: 1280px;
+    max-width: 1280px;
 }
 
 /* Notes */
 
 .notes-container {
-	display: flex;
-	height: 100vh;
-	width: 100vw;
+    display: flex;
+    height: 100vh;
+    width: 100vw;
 }
 
 .notes__sidebar-toggle {
-	position: absolute;
-	top: 1vh;
-	left: 1vw;
-	width: 25px;
-	z-index: 1;
-	cursor: pointer;
-	opacity: 80%;
+    position: absolute;
+    top: 1vh;
+    left: 1vw;
+    width: 25px;
+    z-index: 1;
+    cursor: pointer;
+    opacity: 80%;
 }
 
 .notes__sidebar-toggle:hover {
-	opacity: 100%;
+    opacity: 100%;
 }
 
 .notes__sidebar-new-note {
-	position: absolute;
-	left: 17.5%;
-	top: 1vh;
-	width: 22px;
-	z-index: 1;
-	cursor: pointer;
-	opacity: 80%;
+    position: absolute;
+    left: calc(19.5% - 2rem);
+    top: 1vh;
+    width: 22px;
+    z-index: 1;
+    cursor: pointer;
+    opacity: 80%;
 }
 
 .notes__sidebar-new-note:hover {
-	opacity: 100%;
+    opacity: 100%;
 }
 
 .notes-container__sidebar {
-	flex: 1;
-	padding-top: 2rem;
-	background-color: #171717;
-	overflow: hidden;
-	transition: flex 0.3s ease, max-width 0.3s ease;
-	display: flex;
-	flex-direction: column;
+    flex: 1;
+    padding-top: 2rem;
+    background-color: #171717;
+    overflow: hidden;
+    transition: flex 0.3s ease, max-width 0.3s ease;
+    display: flex;
+    flex-direction: column;
 }
 
 .notes-container__content {
-	flex: 4;
+    flex: 4;
 }
 
 /* Notes Header */
 
 .notes-header {
-	padding-top: 0rem;
-	text-align: center;
-	font-weight: bold;
+    padding-top: 0rem;
+    text-align: center;
+    font-weight: bold;
 }
 
 /* Notes Lists */
 
 .notes-list {
-	padding: 0 1rem 0 1rem;
-	margin-top: 1.5rem;
-	overflow-y: auto;
+    padding: 0 1rem 0 1rem;
+    margin-top: 1.5rem;
+    overflow-y: auto;
 }
 
 .notes-list__item {
-	position: relative;
-	left: -1.5rem;
-	list-style: none;
-	margin-bottom: 1.25rem;
-	text-overflow: ellipsis;
-	overflow-x: hidden;
-	cursor: pointer;
-	opacity: 90%;
+    position: relative;
+    left: -1.5rem;
+    list-style: none;
+    margin-bottom: 1.25rem;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+    cursor: pointer;
+    opacity: 90%;
 }
 
 .notes-list__item span.selected {
-	font-weight: bolder;
-	border-radius: 0.25rem;
+    font-weight: bolder;
+    border-radius: 0.25rem;
 }
 
 .notes-list__item:hover {
-	opacity: 100%;
+    opacity: 100%;
+}
+
+.notes-list__delete-icon {
+    color: rgb(177, 22, 22);
+    background-color: none;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
+    width: 22px;
+    cursor: pointer;
+}
+
+.notes-list__item:hover .notes-list__delete-icon {
+    opacity: 1;
+}
+
+/* Note List - Delete Modal */
+
+.delete-modal {
+    position: fixed;
+    top: 40%;
+    left: 55%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(200, 200, 200, 0.05);
+    padding: 20px;
+    border: 1px solid grey;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+}
+
+.delete-modal button {
+    margin: 0 10px;
+    border: 1px solid darkgrey;
+    border-radius: 5px;
+    padding: 0.5rem;
 }
 
 /* Note Editor */
@@ -97,12 +136,12 @@
 }
 
 .note-editor__header__versions button {
-	font-weight: 300;
-	color: #424242;
+    font-weight: 300;
+    color: #424242;
 }
 .note-editor__header__versions button:hover {
-	color: #696969;
-	transition-duration: 100ms;
+    color: #696969;
+    transition-duration: 100ms;
 }
 
 .note-editor__header__save button {
@@ -111,11 +150,61 @@
 .note-editor__header__save button {
 }
 
-.note-editor__title {
-	position: relative;
-	left: 3rem;
+.note-editor__title input {
+    position: relative;
+    left: 3rem;
+    font-size: 1.5em; /* Same size as h2 */
+    font-weight: bold;
+    border: none;
+    outline: none;
+    background: transparent;
+    display: inline-block;
 }
+
 .note-editor__content {
-	margin: 1.5rem;
-	padding: 2rem;
+    margin: 1.5rem;
+    padding: 2rem;
+}
+
+/* Versions Dropdown */
+
+.note-version-dropdown {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.note-version-dropdown button {
+    margin-bottom: 10px;
+}
+
+.note-version-dropdown__list {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1000; /* Ensures the dropdown is on top */
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    background-color: rgba(36, 36, 36, 0.99);
+    /* width: 200px; Adjust width as needed */
+    text-align: left;
+    max-height: 20vh;
+    overflow-y: scroll;
+}
+
+.note-version-dropdown__list li {
+    padding: 10px;
+    cursor: pointer;
+    opacity: 60%;
+    transition: opacity 0.2s ease;
+}
+
+.note-version-dropdown__list li:hover {
+    opacity: 100%;
+    /* font-weight: bolder; */
 }
