--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -152,11 +152,12 @@
 
 /* Note Editor */
 
+/*
 .note-editor {
 }
 
 .note-editor__header {
-}
+} */
 
 .note-editor__header__versions button {
     font-weight: 300;
@@ -167,11 +168,12 @@
     transition-duration: 100ms;
 }
 
+/*
 .note-editor__header__save button {
 }
 
 .note-editor__header__save button {
-}
+} */
 
 .note-editor__title input {
     position: relative;
@@ -229,4 +231,30 @@
 
 .note-version-dropdown__list li:hover {
     opacity: 100%;
+}
+
+/* Latest Version - Older Version comparaison */
+
+.note-editor__compare-button {
+    padding: 0.3rem 0.6rem;
+    float: right;
+    position: relative;
+    right: 2rem;
+    top: 1rem;
+    background-color: rgb(76, 175, 80, 0.8);
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.note-editor__compare-close {
+    padding: 0.3rem 0.6rem;
+    right: 2rem;
+    top: 1rem;
+    background-color: rgba(190, 119, 119, 0.8);
+    color: white;
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
 }
