--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -236,6 +236,23 @@
 
 /* Latest Version - Older Version comparaison */
 
+.note-editor__close-history-button {
+    padding: 0.3rem 0.6rem;
+    float: right;
+    position: relative;
+    right: 1rem;
+    top: 1rem;
+    background-color: rgba(175, 76, 76, 0.8);
+    color: rgb(0, 0, 0) !important;
+    border-radius: 4px;
+    cursor: pointer;
+    border-right: 1rem;
+}
+
+.note-editor__close-history-button:hover {
+    color: white !important;
+}
+
 .note-editor__compare-button {
     padding: 0.3rem 0.6rem;
     float: right;
@@ -244,9 +261,11 @@
     top: 1rem;
     background-color: rgb(76, 175, 80, 0.8);
     color: white;
-    border: none;
     border-radius: 4px;
     cursor: pointer;
+}
+.note-editor__compare-button:hover {
+    color: white !important;
 }
 
 .note-editor__compare-close {
